Added more css to all files

--- a/src/style.css
+++ b/src/style.css
@@ -2,11 +2,37 @@
     text-align: center;
     font-size: 48px;
     font-family: "Lucida Handwriting", "Brush Script MT", sans-serif;
-    color: blue;
 }
 
 .recipe-list {
     font-size: 24px;
     font-weight: bold;
     color: red;
+}
+
+.pizza {
+    color: red;
+}
+
+.main-header {
+    color: blue;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+
+.taco {
+    color: pink;
+}
+
+li {
+    font-size: 20px;
+}
+
+.recipes {
+    font-size: 32px;
 }
